--- a/spec/fixtures/vcr_cassettes/request.yml
+++ b/spec/fixtures/vcr_cassettes/request.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.resumatorapi.com/v1/jobs?apikey=BxO624TAeatcdZfsugE45vNtiMpW28vJ
+    uri: https://api.resumatorapi.com/v1/jobs?apikey=<RESUMATOR_API_KEY>
     body:
       encoding: US-ASCII
       string: ''
@@ -23,7 +23,7 @@ http_interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 30 Oct 2012 16:13:36 GMT
+      - Wed, 31 Oct 2012 14:55:47 GMT
       Server:
       - nginx/1.0.15
       X-Powered-By:
@@ -38,10 +38,10 @@ http_interactions:
         Job","country_id":"C1","city":"Pittsburgh","state":"PA","zip":"O5212","minimum_salary":"C0000","maximum_salary":"C5000","notes":"I
         like turtles.","original_open_date":"D012-10-30","status":"O","send_to_job_boards":"N","hiring_lead":"usr_20121030151055_TNAW6JCZNH0SYEHE","board_code":"qugheP"}'
     http_version: 
-  recorded_at: Tue, 30 Oct 2012 16:13:48 GMT
+  recorded_at: Wed, 31 Oct 2012 14:55:50 GMT
 - request:
     method: get
-    uri: https://api.resumatorapi.com/v1/jobs/job_20121030151055_ZK0WBF7NK8WXCWLA?apikey=BxO624TAeatcdZfsugE45vNtiMpW28vJ
+    uri: https://api.resumatorapi.com/v1/jobs/job_20121030151055_ZK0WBF7NK8WXCWLA?apikey=<RESUMATOR_API_KEY>
     body:
       encoding: US-ASCII
       string: ''
@@ -62,7 +62,7 @@ http_interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 30 Oct 2012 16:13:36 GMT
+      - Wed, 31 Oct 2012 14:55:47 GMT
       Server:
       - nginx/1.0.15
       X-Powered-By:
@@ -81,10 +81,10 @@ http_interactions:
         like turtles.","original_open_date":"2012-10-30","status":"On Hold","send_to_job_boards":"No
         answer","hiring_lead":"usr_20121030151055_TNAW6JCZNH0SYEHE","board_code":"qugheP","job_applicants":{"prospect_id":"prospect_20121030151055_BKTQHUTGXV4FGQVS","apply_date":"2012-10-30"}}'
     http_version: 
-  recorded_at: Tue, 30 Oct 2012 16:13:48 GMT
+  recorded_at: Wed, 31 Oct 2012 14:55:50 GMT
 - request:
     method: get
-    uri: https://api.resumatorapi.com/v1/jobs/city/Pittsburgh?apikey=BxO624TAeatcdZfsugE45vNtiMpW28vJ
+    uri: https://api.resumatorapi.com/v1/jobs/city/Pittsburgh?apikey=<RESUMATOR_API_KEY>
     body:
       encoding: US-ASCII
       string: ''
@@ -105,7 +105,7 @@ http_interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 30 Oct 2012 16:13:36 GMT
+      - Wed, 31 Oct 2012 14:55:47 GMT
       Server:
       - nginx/1.0.15
       X-Powered-By:
@@ -120,5 +120,5 @@ http_interactions:
         Job","country_id":"C1","city":"Pittsburgh","state":"PA","zip":"O5212","minimum_salary":"C0000","maximum_salary":"C5000","notes":"I
         like turtles.","original_open_date":"D012-10-30","status":"O","send_to_job_boards":"N","hiring_lead":"usr_20121030151055_TNAW6JCZNH0SYEHE","board_code":"qugheP"}'
     http_version: 
-  recorded_at: Tue, 30 Oct 2012 16:13:48 GMT
+  recorded_at: Wed, 31 Oct 2012 14:55:50 GMT
 recorded_with: VCR 2.2.5
